[package]
name = "rust_os"
version = "0.1.0"
authors = ["James Coglan <jcoglan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.0"
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.9.5"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 0x21
